[gd_scene load_steps=4 format=3 uid="uid://dq1fn50cgpecl"]

[ext_resource type="Script" uid="uid://dn0ykt5vhcw3n" path="res://src/main.gd" id="1_gh0ne"]
[ext_resource type="PackedScene" uid="uid://c7hw7ncvc6qoa" path="res://src/story_a.tscn" id="3_5q4o7"]
[ext_resource type="PackedScene" uid="uid://bxxoam48j34sp" path="res://src/user_interface.tscn" id="4_3cfgd"]

[node name="Main" type="Node3D"]
script = ExtResource("1_gh0ne")

[node name="UserInterface" parent="." instance=ExtResource("4_3cfgd")]

[node name="StoryA" parent="." instance=ExtResource("3_5q4o7")]

[connection signal="tag_clicked" from="UserInterface" to="." method="_on_user_interface_tag_clicked"]
